--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Dhairya-77.github.io/portfolio-website",
+  "homepage": "http://dhairya-77.github.io/portfolio-website",
   "name": "persnoal_portfolio_website",
   "private": true,
   "version": "0.0.0",
